// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box renders correctly 1`] = `
<section
  className="anotherClass1 anotherClass2"
  css={
    Object {
      "map": undefined,
      "name": "12so8er",
      "next": undefined,
      "styles": "
        flex-direction:row;@media (min-width: 480px){flex-direction:row-reverse;}@media (min-width: 576px){flex-direction:column;}@media (min-width: 768px){flex-direction:column-reverse;}@media (min-width: 992px){flex-direction:row;}@media (min-width: 1200px){flex-direction:row-reverse;}display:flex;
      ",
      "toString": [Function],
    }
  }
>
  <div
    className=""
    css={
      Object {
        "map": undefined,
        "name": "14wucnk",
        "next": undefined,
        "styles": "
        flex:0;display:none;@media (min-width: 480px){flex:0 1 12.5%;display:flex;}@media (min-width: 576px){flex:0 1 25%;display:flex;}@media (min-width: 768px){flex:0 1 50%;display:flex;}@media (min-width: 992px){flex:0 0 100px;display:flex;}@media (min-width: 1200px){flex:0 0 100px;display:flex;}margin:8px  0px;padding:24px  16px;
      ",
        "toString": [Function],
      }
    }
  >
    This is a children.
  </div>
</section>
`;

exports[`Box renders correctly with custom media queries 1`] = `
<section
  className="anotherClass1 anotherClass2"
  css={
    Object {
      "map": undefined,
      "name": "1ccmu9k",
      "next": undefined,
      "styles": "
        flex-direction:row;@media (min-width: 10px){flex-direction:row-reverse;}@media (min-width: 20px){flex-direction:column;}@media (min-width: 30px){flex-direction:column-reverse;}@media (min-width: 40px){flex-direction:row;}@media (min-width: 50px){flex-direction:row-reverse;}display:flex;
      ",
      "toString": [Function],
    }
  }
>
  <div
    className=""
    css={
      Object {
        "map": undefined,
        "name": "14wucnk",
        "next": undefined,
        "styles": "
        flex:0;display:none;@media (min-width: 480px){flex:0 1 12.5%;display:flex;}@media (min-width: 576px){flex:0 1 25%;display:flex;}@media (min-width: 768px){flex:0 1 50%;display:flex;}@media (min-width: 992px){flex:0 0 100px;display:flex;}@media (min-width: 1200px){flex:0 0 100px;display:flex;}margin:8px  0px;padding:24px  16px;
      ",
        "toString": [Function],
      }
    }
  >
    This is a children.
  </div>
</section>
`;
